--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
       animation: flashing 1.5s infinite;
     }
   </style>
+  <style>
+    li {
+      line-height: 1.8; 
+    }
+  </style>
 </head>
 
 <!body background="images/background.jpg" BGCOLOR="#8C7853">
@@ -66,15 +71,22 @@ Logic Synthesis, Physical Design, FPGA Synthesis, Emerging Nanotechnologies<br>
 <HR>
 <h2> <a name="tools">Tools</a> 
 </h2>
+<li>
 <strong>ALSO</strong>: <strong>A</strong>dcanced  <strong>L</strong>ogic
 <strong>S</strong>ynthesis and <strong>O</strong>ptimization tool. <A HREF="https://github.com/nbulsi/also">[GitHub]</a>
-<A HREF="https://gitee.com/zfchu/also">[Gitee]</a>. <span class="red-star">&#9733;</span> 
+<A HREF="https://gitee.com/zfchu/also">[Gitee]</a>. <span class="red-star">&#9733;</span> </li>
+
+<li>stp: <strong>S</strong>emi-<strong>T</strong>ensor <strong>P</strong>roduct (STP) engine for Electronic Design Automation (EDA). <A HREF="https://github.com/nbulsi/stp">[GitHub]</a>
+<A HREF="https://gitee.com/zfchu/stp">[Gitee]</a>. <span class="red-star">&#9733;</span> </li>
 
 <h2> <a name="tutorials">Tutorials</a> 
 </h2>
+<li>The <A HREF="https://www.eda2.com/iseda/tutorials.html?id=tutorial4">“Boolean Satisfiability Solving, State-of-the-Art”</a> Tutorial organized by Ningbo University, The Chinese University of Hong Kong, and Institute of Software, Chinese Academy of Sciences is presented at <A
+  HREF="https://www.eda2.com/conferenceHome/">ISEDA'24</a> on May 10th, 2024.
+ </li>
 <li>The <A HREF="https://www.eda2.com/conferenceHome/program/detail?key=tutorial2">“Logic Synthesis Tools and Techniques: Insights from Academia and
     Industry”</a> Tutorial organized by Ningbo University and Giga
-Design Automation is accepted for presentation at <A
+Design Automation is presented at <A
   HREF="https://www.eda2.com/conferenceHome/">ISEDA'23</a> on May 8th, 2023.
 <a href="ISEDA2023.pdf" download >[handouts]</a>, 
 <a href="also.mp4" download >[demo video]</a>. 
@@ -89,6 +101,11 @@ Design Automation is accepted for presentation at <A
 
 <UL>
 	 <p class="big">
+	     <li> July 2024, Jiaxiang as the first author won the EDA Competition Winner
+	       at <A HREF="https://www.eda2.com/conferenceHome/">SMACD'24</a>.</li>
+	     <li>June 2024, Invited to served as TPC Member of <A
+	         HREF="https://www.date-conference.com/">
+			 DATE'24</a>.</li>
    <li>Mar. 2024, Invited to served as TPC Member of <A
        HREF="https://std.samr.gov.cn/search/orgDetailView?data_id=EE1BA472BFC52880E05397BE0A0A248E">
        National Standardization TC 599/ WG1</a>.</li>
@@ -156,7 +173,7 @@ Design Automation is accepted for presentation at <A
 <UL>
 	 <p class="big">
    <strong>Zhufei Chu</strong> <A
-     HREF="https://tutors.eol.cn/web/index/tabledetails?service_id=36&tutor_id=7366&rel=3&type=1">[NBU
+     HREF="https://zhaosheng.eol.cn/11646/tutors/index/daoshidetail?school_id=461&m_id=35619&ds_id=19760">[NBU
    link]</a>, born on Oct. 24th, 1986,  received his B.S. degree in electronic engineering from Shandong University, Weihai, China, in 2008, and his M.S. and Ph.D. degrees in communication and information systems from Ningbo University, Ningbo, in 2011 and 2014, respectively.
     He was a postdoctoral fellow at the Ecole Polytechnique Federale de Lausanne (EPFL), Lausanne, from 2016 to 2017, in the group of <A HREF="http://si2.epfl.ch/~demichel/">Prof. Giovanni De Micheli</a>.
     He is currently a full professor at Ningbo University, Ningbo. His current research interests include many aspects of logic synthesis and its applications.
@@ -179,10 +196,13 @@ style="width:1em;margin-right:.5em;" alt="ORCID iD icon">[orcid]</a>
 <OL>
   <h4> 2024 </h3>
    <p class="big">
+	   <li>Jiaxiang Pan and <A HREF="https://zfchu.github.io/">Zhufei Chu</a>, "
+   Area-Aware Logic Mapping for MAGIC based In-Memory Computing", <strong>SMACD' 24</strong>, <i>International Conference on Synthesis, Modeling, Analysis and Simulation Methods, and Applications to Circuit Design</i>, July
+   2024, Volos, Greece. (<strong>EDA Competition Winner</strong>) <span class="red-star">&#9733;</span> </li>
    <li>Qiyu Yang, Zheng-Dong Luo, Fei Xiao, Junpeng Zhang, Dawei Zhang,
      Dongxin Tan, Xuetao Gan, Yan Liu, <A HREF="https://zfchu.github.io/">Zhufei Chu</a>, Yinshui Xia, and Genquan Han,  
-     "Solid-state nonvolatile memories based on vdW heterostructure-based vertical-transport ferroelectric field-effect transistors", 
-     <i>Science China Information Sciences</i>, 2024, Accepted for publication.
+     "<A HREF="https://link.springer.com/article/10.1007/s11432-024-4004-9#citeas">Solid-state nonvolatile memories based on vdW heterostructure-based vertical-transport ferroelectric field-effect transistors</a>", 
+     <i>Science China Information Sciences</i>, 67, 160405 (2024).
      </li>
    <li>
 Lei Chen, Yiqi Chen, <A HREF="https://zfchu.github.io/">Zhufei Chu</a>, Wenji Fang, Tsung-Yi Ho, Yu Huang, Sadaf Khan, Min Li, Xingquan Li, 
@@ -191,6 +211,12 @@ Evangeline F.Y. Young, Bei Yu, Mingxuan Yuan, Haoyi Zhang, Zuodong Zhang, Yuxian
 "<A HREF="https://arxiv.org/abs/2403.07257">The Dawn of AI-Native EDA: Promises and Challenges of Large
   Circuit Models</a>", arXiv preprint arXiv:2403.07257, Mar. 2024.
    </li>
+   <li>
+     朱柏成，<A HREF="https://zfchu.github.io/">储著飞</a>，潘鸿洋，王伦耀，夏银水，<A HREF="https://www.jcad.cn/cn/article/doi/10.3724/SP.J.1089.2024.19949">基于XMG的乘法器电路等价性验证算法</a>，<i>计算机辅助设计与图形学学报</i>，2024, 36(3): 443-451.
+     </li>
+   <li>
+     赵子豪，<A HREF="https://zfchu.github.io/">储著飞</a>, 王伦耀，夏银水，<A HREF="https://www.jcad.cn/cn/article/doi/10.3724/SP.J.1089.2024.19951">多级混合极性Reed-Muller逻辑电路功耗优化</a>，<i>计算机辅助设计与图形学学报</i>，2024, 36(4): 615-624.
+     </li>
       <li> Ming Yan, Guanghai Dong, Yong Xiao, Yun Shao, and <A HREF="https://zfchu.github.io/">Zhufei Chu</a>, "
    Exact Synthesis and Inversion Optimization for RM3 based Logic-in-Memory", <strong>ISEDA' 24</strong>, <i> IEEE International Symposium of EDA</i>, May
    2024, Xi'an, China, accepted for publication.</li>
@@ -302,12 +328,6 @@ Zhang, Yinshui Xia, Lunyao Wang, and Weiqiang Liu, "<A
   Majority-Logic-Based Approximate Arithmetic Circuits</a>", <i>IEEE Transactions
   on Very Large Scale Integration Systems</i> (<strong>TVLSI</strong>), Dec.
 2022, 30(12):1827-1839.
-     </li>
-   <li>
-     朱柏成，<A HREF="https://zfchu.github.io/">储著飞</a>，潘鸿洋，王伦耀，夏银水，基于XMG的乘法器电路等价性验证算法，<i>计算机辅助设计与图形学学报</i>，2022，录用待发表.
-     </li>
-   <li>
-     赵子豪，<A HREF="https://zfchu.github.io/">储著飞</a>, 王伦耀，夏银水，多级混合极性Reed-Muller逻辑电路功耗优化，<i>计算机辅助设计与图形学学报</i>，2022，录用待发表.
      </li>
 	   <li>
 Qing Wan, Changjin Wan, Huaqiang Wu, Yuchao Yang, Xiaohe Huang, Peng Zhou, Lin Chen, Tian-Yu Wang, Yi Li, Kanhao Xue, Yuhui He, Xiangshui Miao, Xi Li, Chenchen Xie, Houpeng Chen, Zhitang Song, Hong Wang, Yue Hao, Junyao Zhang, Jia Huang, Zheng Yu Ren, Li Qiang Zhu, Jianyu Du, Chen Ge, Yang Liu, Guanglong Ding, Ye Zhou, Su-Ting Han, Guosheng Wang, Xiao Yu, Bing Chen, <A HREF="https://zfchu.github.io/">Zhufei Chu</a>, Lunyao Wang, Yinshui Xia, Chen Mu, Feng Lin, Chixiao Chen, Bojun Cheng, Yannan Xing, Weitao Zeng, Hong Chen, Lei Yu, Giacomo Indiveri and Ning Qiao, "<A HREF="http://iopscience.iop.org/article/10.1088/2634-4386/ac7a5a">2022 roadmap on neuromorphic devices & applications research in China </a>" (Section 12: Automated synthesis and mapping), <i>Neuromorphic Computing and Engineering</i>, 2022, 2(4): 042501. (<strong>Invited</strong>)
@@ -599,9 +619,15 @@ Scale Integration Systems (<strong>TVLSI</strong>)</i>,
       <td></td>
       <td width="500"></td>
       <td></td>
-      <td width="350">
-        <img src="images/yangym.jpg" width="320">
+      <td width="450">
+        <img src="images/yangym.jpg" width="420">
       </td>
+	  </td>
+	        <td width="500"></td>
+	        <td></td>
+	        <td width="450">
+	          <img src="images/group.jpeg" width="420">
+	        </td>
     </tr>
   </tbody>
 </table>
