--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ Design Automation is presented at <A
 <UL>
 	 <p class="big">
 	     <li> July 2024, Jiaxiang as the first author won the EDA Competition Winner
-	       at <A HREF="https://www.eda2.com/conferenceHome/">SMACD'24</a>.</li>
+	       at <A HREF="https://smacd-conference.org/">SMACD'24</a>.</li>
 	     <li>June 2024, Invited to served as TPC Member of <A
 	         HREF="https://www.date-conference.com/">
 			 DATE'25</a>.</li>
@@ -218,20 +218,16 @@ Evangeline F.Y. Young, Bei Yu, Mingxuan Yuan, Haoyi Zhang, Zuodong Zhang, Yuxian
      赵子豪，<A HREF="https://zfchu.github.io/">储著飞</a>, 王伦耀，夏银水，<A HREF="https://www.jcad.cn/cn/article/doi/10.3724/SP.J.1089.2024.19951">多级混合极性Reed-Muller逻辑电路功耗优化</a>，<i>计算机辅助设计与图形学学报</i>，2024, 36(4): 615-624.
      </li>
       <li> Ming Yan, Guanghai Dong, Yong Xiao, Yun Shao, and <A HREF="https://zfchu.github.io/">Zhufei Chu</a>, "
-   Exact Synthesis and Inversion Optimization for RM3 based Logic-in-Memory", <strong>ISEDA' 24</strong>, <i> IEEE International Symposium of EDA</i>, May
-   2024, Xi'an, China, accepted for publication.</li>
+   <A HREF="https://ieeexplore.ieee.org/document/10618072">Exact Synthesis and Inversion Optimization for RM3 based Logic-in-Memory</a>", <strong>ISEDA' 24</strong>, <i> IEEE International Symposium of EDA</i>, May 2024, pp. 266-271, Xi'an, China.</li>
 
       <li> Zhang Hu, Chengyu Ma, and <A HREF="https://zfchu.github.io/">Zhufei Chu</a>, "
-   A Novel Structural Choices Generation Method for Logic Restructuring", <strong>ISEDA' 24</strong>, <i> IEEE International Symposium of EDA</i>, May
-   2024, Xi'an, China, accepted for publication.</li>
+   <A HREF="https://ieeexplore.ieee.org/document/10617691">A Novel Structural Choices Generation Method for Logic Restructuring</a>", <strong>ISEDA' 24</strong>, <i> IEEE International Symposium of EDA</i>, May 2024, pp. 306-311, Xi'an, China.</li>
 
       <li> Jun Zhu, Hongyang Pan, and <A HREF="https://zfchu.github.io/">Zhufei Chu</a>, "
-   Multiplication Complexity Optimization based on Quantified Boolean Formulas", <strong>ISEDA' 24</strong>, <i> IEEE International Symposium of EDA</i>, May
-   2024, Xi'an, China, accepted for publication.</li>
+  <A HREF="https://ieeexplore.ieee.org/document/10617946">Multiplication Complexity Optimization based on Quantified Boolean Formulas</a>", <strong>ISEDA' 24</strong>, <i> IEEE International Symposium of EDA</i>, May 2024, pp. 332-336, Xi'an, China.</li>
 
       <li> Yuting Cai, Yue Wu, Xiaoyan Yang, and <A HREF="https://zfchu.github.io/">Zhufei Chu</a>, "
-   A Logic Optimization Method Using Reinforcement Learning", <strong>ISEDA' 24</strong>, <i> IEEE International Symposium of EDA</i>, May
-   2024, Xi'an, China, accepted for publication.</li>
+   <A HREF="https://ieeexplore.ieee.org/document/10618015">A Logic Optimization Method Using Reinforcement Learning</a>", <strong>ISEDA' 24</strong>, <i> IEEE International Symposium of EDA</i>, May 2024, pp. 312-317, Xi'an, China.</li>
   <li>
     <A HREF="https://zfchu.github.io/">储著飞</a>, 马铖昱, 闫鸣, 潘家祥,
        潘鸿洋, 王伦耀, 夏银水，"<A
