--- a/index.html
+++ b/index.html
@@ -101,10 +101,12 @@ Design Automation is presented at <A
 
 <UL>
 	 <p class="big">
+	     <li> Sep. 2024, Jun as the first author won the ISEDA Honorable Mention
+         Paper Award at <A HREF="https://www.eda2.com/conferenceHome/">ISEDA'24</a>.</li>
 	     <li> July 2024, Jiaxiang as the first author won the EDA Competition Winner
 	       at <A HREF="https://smacd-conference.org/">SMACD'24</a>.</li>
 	     <li>June 2024, Invited to served as TPC Member of <A
-	         HREF="https://www.date-conference.com/">
+	         HREF="https://www.date-conference.com/tpc">
 			 DATE'25</a>.</li>
    <li>Mar. 2024, Invited to served as TPC Member of <A
        HREF="https://std.samr.gov.cn/search/orgDetailView?data_id=EE1BA472BFC52880E05397BE0A0A248E">
@@ -224,7 +226,7 @@ Evangeline F.Y. Young, Bei Yu, Mingxuan Yuan, Haoyi Zhang, Zuodong Zhang, Yuxian
    <A HREF="https://ieeexplore.ieee.org/document/10617691">A Novel Structural Choices Generation Method for Logic Restructuring</a>", <strong>ISEDA' 24</strong>, <i> IEEE International Symposium of EDA</i>, May 2024, pp. 306-311, Xi'an, China.</li>
 
       <li> Jun Zhu, Hongyang Pan, and <A HREF="https://zfchu.github.io/">Zhufei Chu</a>, "
-  <A HREF="https://ieeexplore.ieee.org/document/10617946">Multiplication Complexity Optimization based on Quantified Boolean Formulas</a>", <strong>ISEDA' 24</strong>, <i> IEEE International Symposium of EDA</i>, May 2024, pp. 332-336, Xi'an, China.</li>
+  <A HREF="https://ieeexplore.ieee.org/document/10617946">Multiplication Complexity Optimization based on Quantified Boolean Formulas</a>", <strong>ISEDA' 24</strong>, <i> IEEE International Symposium of EDA</i>, May 2024, pp. 332-336, Xi'an, China.  (<strong>Honorable Mention Paper Award</strong>) <span class="red-star">&#9733;</span> </li>
 
       <li> Yuting Cai, Yue Wu, Xiaoyan Yang, and <A HREF="https://zfchu.github.io/">Zhufei Chu</a>, "
    <A HREF="https://ieeexplore.ieee.org/document/10618015">A Logic Optimization Method Using Reinforcement Learning</a>", <strong>ISEDA' 24</strong>, <i> IEEE International Symposium of EDA</i>, May 2024, pp. 312-317, Xi'an, China.</li>
