--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ Logic Synthesis, Physical Design, FPGA Synthesis, Emerging Nanotechnologies<br>
 
 <h2> <a name="tutorials">Tutorials</a> 
 </h2>
-<li>The <A HREF="https://www.eda2.com/iseda/tutorials.html?id=tutorial4">“Boolean Satisfiability Solving, State-of-the-Art”</a> Tutorial organized by Ningbo University, The Chinese University of Hong Kong, and Institute of Software, Chinese Academy of Sciences is presented at <A
+<li>The <A HREF="https://www.eda2.com/iseda2024/tutorials.html">“Boolean Satisfiability Solving, State-of-the-Art”</a> Tutorial organized by Ningbo University, The Chinese University of Hong Kong, and Institute of Software, Chinese Academy of Sciences is presented at <A
   HREF="https://www.eda2.com/conferenceHome/">ISEDA'24</a> on May 10th, 2024.
  </li>
 <li>The <A HREF="https://www.eda2.com/conferenceHome/program/detail?key=tutorial2">“Logic Synthesis Tools and Techniques: Insights from Academia and
@@ -101,6 +101,9 @@ Design Automation is presented at <A
 
 <UL>
 	 <p class="big">
+	     <li>Oct. 2024, Invited to served as TPC Member of <A
+	         HREF="https://www.dac.com">
+			 DAC'25</a>.</li>
 	     <li> Sep. 2024, Jun as the first author won the ISEDA Honorable Mention
          Paper Award at <A HREF="https://www.eda2.com/conferenceHome/">ISEDA'24</a>.</li>
 	     <li> July 2024, Jiaxiang as the first author won the EDA Competition Winner
@@ -198,6 +201,13 @@ style="width:1em;margin-right:.5em;" alt="ORCID iD icon">[orcid]</a>
 <OL>
   <h4> 2024 </h3>
    <p class="big">
+   <li>
+Lei Chen, Yiqi Chen, <A HREF="https://zfchu.github.io/">Zhufei Chu</a>, Wenji Fang, Tsung-Yi Ho, Yu Huang, Sadaf Khan, Min Li, Xingquan Li, 
+Yun Liang, Yibo Lin, Jinwei Liu, Yi Liu, Guojie Luo, Zhengyuan Shi, Guangyu Sun, Dimitrios Tsaras, Runsheng Wang, Ziyi Wang, Xinming Wei, Zhiyao Xie, Qiang Xu, Chenhao Xue, 
+Evangeline F.Y. Young, Bei Yu, Mingxuan Yuan, Haoyi Zhang, Zuodong Zhang, Yuxiang Zhao, Hui-Ling Zhen, Ziyang Zheng, Binwu Zhu, Keren Zhu, and Sunan Zou, 
+"<A HREF="https://link.springer.com/article/10.1007/s11432-024-4155-7"> Large
+  Circuit Models: Opportunities and Challenges </a>", <i>Science China Information Sciences</i>, Sep. 2024, 67(10): 200402.
+   </li>
 	   <li>Jiaxiang Pan and <A HREF="https://zfchu.github.io/">Zhufei Chu</a>, "
    Area-Aware Logic Mapping for MAGIC based In-Memory Computing", <strong>SMACD' 24</strong>, <i>International Conference on Synthesis, Modeling, Analysis and Simulation Methods, and Applications to Circuit Design</i>, July
    2024, Volos, Greece. (<strong>EDA Competition Winner</strong>) <span class="red-star">&#9733;</span> </li>
