--- a/index.html
+++ b/index.html
@@ -199,6 +199,17 @@ style="width:1em;margin-right:.5em;" alt="ORCID iD icon">[orcid]</a>
     </a></a> </h2>
 <p>
 <OL>
+   <h3> 2025 </h3>
+   <p class="big">
+   <li>
+     Hongyang Pan, Keren Zhu, Fan Yang,  <A
+       HREF="https://zfchu.github.io/">Zhufei Chu</a> and Xuan Zeng,
+     "ELMap: Area-Driven LUT Mapping with k-LUT Network Exact Synthesis",
+     <strong> DATE' 25</strong>, <i>2025 Design, Automation
+       and Test in Europe Conference</i>, Lyon, France, Mar. 2025. 
+   </li>
+
+
   <h4> 2024 </h3>
    <p class="big">
    <li>
