--- a/index.html
+++ b/index.html
@@ -101,6 +101,14 @@ Design Automation is presented at <A
 
 <UL>
 	 <p class="big">
+   
+      <li> Jan. 2025, Invited to served as TPC Chair of <A
+       HREF="http://iccs.org/index.html">ICCS'25</a>.</li>
+     <li> Jan. 2025, Invited to served as TPC
+      member of <A HREF="https://www.iwls.org/iwls2025/">IWLS'25</a>.</li>
+     <li>Dec. 2024, Invited to served as High-Level, Behavioral, and Logic
+       Synthesis and Optimization Track
+     Chair of <A HREF="https://www.eda2.com/iseda/">ISEDA'25</a>.</li>
 	     <li>Oct. 2024, Invited to served as TPC Member of <A
 	         HREF="https://www.dac.com">
 			 DAC'25</a>.</li>
@@ -201,6 +209,18 @@ style="width:1em;margin-right:.5em;" alt="ORCID iD icon">[orcid]</a>
 <OL>
    <h3> 2025 </h3>
    <p class="big">
+	   	   <li>
+	   	Zhang Hu, Hongyang Pan, Yinshui Xia, Lunyao Wang and <A
+	          HREF="https://zfchu.github.io/">Zhufei Chu</a>, "Mixed Structural Choice Operator: Enhancing Technology Mapping with Heterogeneous Representations",  <strong> DAC' 25</strong>, <i>ACM/IEEE Design Automation Conference</i>, San Francisco, USA, June 2025. 
+	   	   </li>
+	   <li>
+Zhengyuan Shi, Tiebing Tang, Jiaying Zhu, Sadaf Khan, Hui-Ling Zhen, Mingxuan Yuan, <A
+       HREF="https://zfchu.github.io/">Zhufei Chu</a> and Qiang Xu, "Logic Optimization Meets SAT: A Novel Framework for Circuit-SAT Solving",  <strong> DAC' 25</strong>, <i>ACM/IEEE Design Automation Conference</i>, San Francisco, USA, June 2025. 
+	   </li>
+	   <li>
+	   	Qiyao He and <A
+       HREF="https://zfchu.github.io/">Zhufei Chu</a>,"Enhancing Alliance VLSI Toolchain by Mixed Gate-level Logic Synthesis",  <strong>CSTIC' 25</strong>, <i>2025 Conference of Science and Technology for Integrated Circuits</i>, Shanghai, China, Mar. 2025.
+	   </li>
    <li>
      Hongyang Pan, Keren Zhu, Fan Yang,  <A
        HREF="https://zfchu.github.io/">Zhufei Chu</a> and Xuan Zeng,
@@ -278,6 +298,9 @@ Huali Duan, Erping Li, Qinyi Huang, Da Li, <A HREF="https://zfchu.github.io/">Zh
      Zeng, and <A HREF="https://zfchu.github.io/">Zhufei Chu</a>,
      "A Semi-Tensor Product based Circuit Simulation for SAT-sweeping", <strong> DATE' 24</strong>, <i>2024 Design, Automation
        and Test in Europe Conference</i>, Valencia, Spain, Mar. 2024. 
+   </li>
+   <li>
+	   Sen Liu, Hongwei Zhou, Yinshui Xia, Lunyao Wang and <A HREF="https://zfchu.github.io/">Zhufei Chu</a>, ""<A HREF="https://ieeexplore.ieee.org/document/10532048">Logic Synthesis for XOR-AND Graphs via Reed-Muller Representations</a>," <strong> CSTIC' 24</strong>, <i>2024 Conference of Science and Technology for Integrated Circuits</i>, Shanghai, China, Mar. 2024. 
    </li>
 
    <h3> 2023 </h3>
@@ -588,13 +611,17 @@ Scale Integration Systems (<strong>TVLSI</strong>)</i>,
   <li>Proceedings Chair, TPC member, and Session Chair  for the International Workshop on Logic and Synthesis, 2019-2021.</li>
    <li>Finance Chair, TPC member, and Session Chair  for the International
      Workshop on Logic and Synthesis, 2022-2023.</li>
-   <li>Digital Design & Verification Track Chair of the IEEE International Symposium of EDA (ISEDA 2023).</li>
+     <li>TPC member for the International
+       Workshop on Logic and Synthesis, 2024-2025.</li>
+   <li>Digital Design & Verification Track Chair of the IEEE International Symposium of EDA, 2023-2024.</li>
+    <li>High-Level, Behavioral, and Logic Synthesis and Optimization Track Chair of the IEEE International Symposium of EDA, 2025.</li>
    <li>TPC Chair for the International Conference on Circuits and Systems
-     (ICCS), 2023.</li>
+     (ICCS), 2023, 2025.</li>
    <li>Editorial Board Member for the Journal of Electronics and Enformation Technology (JEIT), 2023-2026 </li>
-  <li>TPC member for the Design Automation Conference, 2023-2024.</li>
+  <li>TPC member for the Design Automation Conference, 2023-2025.</li>
+  <li>TPC member for the Design, Automation and Test in Europe Conference, 2024.</li>
   <li>TPC member for the International Conference on VLSI Design, 2020-2022. </li>
-  <li>TPC member for the China Semiconductor Technology International Conference (Symposium IX), 2021-2022. </li>
+  <li>TPC member for the China Semiconductor Technology International Conference (Symposium IX), 2021-2025. </li>
   <li>TPC member for the IFIP/IEEE International Conference on Very Large Scale Integration (PhD Forum), 2020. </li>
   <li>TPC member for the IEEE International Conference on Computer Design (Special Sessions), 2020. </li>
   <li>TPC member for the IEEE International Conference on Omni-layer Intelligent systems, 2019-2020. </li>
