--- a/index.html
+++ b/index.html
@@ -102,6 +102,8 @@ Design Automation is presented at <A
 <UL>
 	 <p class="big">
    
+      <li> Feb. 2025, Invited to served as TPC member of <A
+       HREF="https://sasimi.jp/new/sasimi2025/">SASIMI'25</a>.</li>
       <li> Jan. 2025, Invited to served as TPC Chair of <A
        HREF="http://iccs.org/index.html">ICCS'25</a>.</li>
      <li> Jan. 2025, Invited to served as TPC
