--- a/index.html
+++ b/index.html
@@ -102,82 +102,82 @@ Design Automation is presented at <A
 <UL>
 	 <p class="big">
    
-      <li> Feb. 2025, Invited to served as TPC member of <A
+      <li> Feb. 2025, Invited to serve as a TPC member of <A
        HREF="https://sasimi.jp/new/sasimi2025/">SASIMI'25</a>.</li>
-      <li> Jan. 2025, Invited to served as TPC Chair of <A
+      <li> Jan. 2025, Invited to serve as TPC Chair of <A
        HREF="http://iccs.org/index.html">ICCS'25</a>.</li>
-     <li> Jan. 2025, Invited to served as TPC
+     <li> Jan. 2025, Invited to serve as a TPC
       member of <A HREF="https://www.iwls.org/iwls2025/">IWLS'25</a>.</li>
-     <li>Dec. 2024, Invited to served as High-Level, Behavioral, and Logic
+     <li>Dec. 2024, Invited to serve as High-Level, Behavioral, and Logic
        Synthesis and Optimization Track
      Chair of <A HREF="https://www.eda2.com/iseda/">ISEDA'25</a>.</li>
-	     <li>Oct. 2024, Invited to served as TPC Member of <A
+	     <li>Oct. 2024, Invited to serve as a TPC Member of <A
 	         HREF="https://www.dac.com">
 			 DAC'25</a>.</li>
 	     <li> Sep. 2024, Jun as the first author won the ISEDA Honorable Mention
          Paper Award at <A HREF="https://www.eda2.com/conferenceHome/">ISEDA'24</a>.</li>
 	     <li> July 2024, Jiaxiang as the first author won the EDA Competition Winner
 	       at <A HREF="https://smacd-conference.org/">SMACD'24</a>.</li>
-	     <li>June 2024, Invited to served as TPC Member of <A
+	     <li>June 2024, Invited to serve as a TPC Member of <A
 	         HREF="https://www.date-conference.com/tpc">
 			 DATE'25</a>.</li>
-   <li>Mar. 2024, Invited to served as TPC Member of <A
+   <li>Mar. 2024, Invited to serve as a TPC Member of <A
        HREF="https://std.samr.gov.cn/search/orgDetailView?data_id=EE1BA472BFC52880E05397BE0A0A248E">
        National Standardization TC 599/ WG1</a>.</li>
-   <li>Oct. 2023, Invited to served as Research TPC Subcommittee Member of <A
+   <li>Oct. 2023, Invited to serve as a Research TPC Subcommittee Member of <A
        HREF="https://www.dac.com/">
        DAC'24</a>.</li>
-   <li>Oct. 2023, Invited to served as Digital Design & Verification Track
+   <li>Oct. 2023, Invited to serve as Digital Design & Verification Track
      Chair of <A HREF="https://www.eda2.com/conferenceHome/">ISEDA'24</a>.</li>
-   <li>Oct. 2023, Invited to served as <A
+   <li>Oct. 2023, Invited to serve as a <A
                                            HREF=https://www.semiconchina.org/en/7>TPC member</a> and <A
        HREF=https://www.semiconchina.org/en/1244>invited speaker</a> of
      <A HREF=https://www.semiconchina.org/en/5>CSTIC'24</a>.</li>
-   <li>Aug. 2023, Invited to served as Competition Committee Member of <A HREF="https://eda.icisc.cn/activity/toTpcType">EDA Elite Challenge</a>.</li>
+   <li>Aug. 2023, Invited to serve as a Competition Committee Member of <A HREF="https://eda.icisc.cn/activity/toTpcType">EDA Elite Challenge</a>.</li>
    <li> July 2023, Chengyu as the first author won the Honorable Paper Award
      at <A HREF="https://www.eda2.com/conferenceHome/">ISEDA'23</a>.</li>
-   <li> May 2023, Invited to served as Publication Chair of <A HREF="https://conf.ccf.org.cn/ccfdac23">CCFDAC'23</a>.</li>
-   <li> Mar. 2023, Invited to served as Editorial Board Member of <A
+   <li> May 2023, Invited to serve as Publication Chair of <A HREF="https://conf.ccf.org.cn/ccfdac23">CCFDAC'23</a>.</li>
+   <li> Mar. 2023, Invited to serve as a Editorial Board Member of <A
        HREF="https://jeit.ac.cn/news/About%20Journal.htm">JEIT</a>.</li>
-   <li> Mar. 2023, Invited to served as TPC Chair of <A
+   <li> Mar. 2023, Invited to serve as TPC Chair of <A
        HREF="http://iccs.org/index.html">ICCS'23</a>.</li>
     <li> Dec. 2022, Promoted to be a Full Professor.</li>
-    <li> Dec. 2022, Invited to served as Finance Chair and TPC
+    <li> Dec. 2022, Invited to serve as Finance Chair and TPC
       member of <A HREF="https://www.iwls.org/iwls2023/">IWLS'23</a>.</li>
-   <li>Nov. 2022, Invited to served as Research TPC Subcommittee Member of <A
+   <li>Nov. 2022, Invited to serve as a Research TPC Subcommittee Member of <A
        HREF="https://www.dac.com/">
        DAC'23</a>.</li>
-   <li>Oct. 2022, Invited to served as Digital Design & Verification Track
+   <li>Oct. 2022, Invited to serve as Digital Design & Verification Track
      Chair of <A HREF="https://www.eda2.com/conferenceHome/">ISEDA'23</a>.</li>
-   <li> May 2022, Invited to served as sub-forum co-chair and TPC member of <A
+   <li> May 2022, Invited to serve as sub-forum co-chair and a TPC member of <A
                                                           HREF="http://conf.ccf.org.cn/chip2022">CCF
                                                           Chip'22</a>.</li>
-   <li> Oct. 2021, Invited to served as TPC member of <A
+   <li> Oct. 2021, Invited to serve as a TPC member of <A
                                                           HREF="https://embeddedandvlsidesignconference.org/">VLSID'22</a>.</li>
     <li> Oct. 2021, Won the Best Paper Award at <A HREF="http://conf.ccf.org.cn/ccfdac2021">CCFDAC'21</a>. (<A HREF="https://news.nbu.edu.cn/info/1004/42169.htm">NBU link</a>)</li>
-    <li> Aug. 2021, Invited to served as Finance Chair and TPC
+    <li> Aug. 2021, Invited to serve as Finance Chair and a TPC
       member of <A HREF="https://www.iwls.org/iwsl2022/">IWLS'22</a>.</li>
-    <li> Jan. 2021, Invited to served as Proceedings Chair and TPC member of <A HREF="https://www.iwls.org/iwls2021/">IWLS'21</a>.</li>
-  <li> Oct. 2020, Invited to served as TPC member of <A
+    <li> Jan. 2021, Invited to serve as Proceedings Chair and a TPC member of <A HREF="https://www.iwls.org/iwls2021/">IWLS'21</a>.</li>
+  <li> Oct. 2020, Invited to serve as a TPC member of <A
                                                           HREF="https://embeddedandvlsidesignconference.org/">VLSID'21</a>.</li>
-  <li> Aug. 2020, Invited to served as TPC member of <A
+  <li> Aug. 2020, Invited to serve as a TPC member of <A
       HREF="https://www.semiconchina.org/en/7">
       CSTIC'21</a> (Symposium IX). </li>
-  <li> Aug. 2020, Invited to served as TPC member of <A
+  <li> Aug. 2020, Invited to serve as a TPC member of <A
       HREF="https://sites.google.com/view/vlsi-soc-2020/home">
       VLSI-SoC'20</a> (PhD Forum). </li>
-  <li> Aug. 2020, Invited to served as TPC member of <A
+  <li> Aug. 2020, Invited to serve as a TPC member of <A
       HREF="http://www.iccd-conf.com/Home.html">
       ICCD'20</a> (Special Sessions). </li>
-  <li> Mar. 2020, Invited to served as TPC member of <A
+  <li> Mar. 2020, Invited to serve as a TPC member of <A
       HREF="https://conf.ccf.org.cn/web/html5/index.html?globalId=574c0f1ef8c04db9bd3b5d718e091b5c&type=1"> CCFDAC'20</a>. </li>
-  <li> Feb. 2020, Invited to served as TPC member of <A
+  <li> Feb. 2020, Invited to serve as a TPC member of <A
       HREF="https://coinsconf.com/"> COINS'20</a>. </li>
-  <li> Jan. 2020, Invited to served as Proceedings Chair of <A
+  <li> Jan. 2020, Invited to serve as Proceedings Chair of <A
       HREF="http://www.iwls.org/iwls2020/"> IWLS'20</a>. </li>
-  <li> June 2019, Invited to served as TPC member of <A
+  <li> June 2019, Invited to serve as a TPC member of <A
                                                           HREF="https://embeddedandvlsidesignconference.org/">VLSID'20</a>.</li>
-  <li> Feb. 2019, Invited to served as Proceedings Chair and
+  <li> Feb. 2019, Invited to serve as Proceedings Chair and
     Session Chair of <A HREF="http://www.iwls.org/iwls2019/"> IWLS'19</a>. </li>
 </UL>
 
@@ -242,7 +242,7 @@ Evangeline F.Y. Young, Bei Yu, Mingxuan Yuan, Haoyi Zhang, Zuodong Zhang, Yuxian
   Circuit Models: Opportunities and Challenges </a>", <i>Science China Information Sciences</i>, Sep. 2024, 67(10): 200402.
    </li>
 	   <li>Jiaxiang Pan and <A HREF="https://zfchu.github.io/">Zhufei Chu</a>, "
-   Area-Aware Logic Mapping for MAGIC based In-Memory Computing", <strong>SMACD' 24</strong>, <i>International Conference on Synthesis, Modeling, Analysis and Simulation Methods, and Applications to Circuit Design</i>, July
+   <A HREF="https://ieeexplore.ieee.org/document/10745461">Area-Aware Logic Mapping for MAGIC based In-Memory Computing</a>", <strong>SMACD' 24</strong>, <i>International Conference on Synthesis, Modeling, Analysis and Simulation Methods, and Applications to Circuit Design</i>, July
    2024, Volos, Greece. (<strong>EDA Competition Winner</strong>) <span class="red-star">&#9733;</span> </li>
    <li>Qiyu Yang, Zheng-Dong Luo, Fei Xiao, Junpeng Zhang, Dawei Zhang,
      Dongxin Tan, Xuetao Gan, Yan Liu, <A HREF="https://zfchu.github.io/">Zhufei Chu</a>, Yinshui Xia, and Genquan Han,  
@@ -298,7 +298,7 @@ Huali Duan, Erping Li, Qinyi Huang, Da Li, <A HREF="https://zfchu.github.io/">Zh
    <li>
      Hongyang Pan, Ruibing Zhang, Yinshui Xia, Lunyao Wang, Fan Yang, Xuan
      Zeng, and <A HREF="https://zfchu.github.io/">Zhufei Chu</a>,
-     "A Semi-Tensor Product based Circuit Simulation for SAT-sweeping", <strong> DATE' 24</strong>, <i>2024 Design, Automation
+     "<A HREF="https://ieeexplore.ieee.org/document/10546678">A Semi-Tensor Product based Circuit Simulation for SAT-sweeping</a>", <strong> DATE' 24</strong>, <i>2024 Design, Automation
        and Test in Europe Conference</i>, Valencia, Spain, Mar. 2024. 
    </li>
    <li>
@@ -313,9 +313,9 @@ Huali Duan, Erping Li, Qinyi Huang, Da Li, <A HREF="https://zfchu.github.io/">Zh
        Equivalence Checking</a>", <i>Microelectronics Journal</i>, Vol 142, 106005, Dec. 2023. </li>
 	   <li>Zhengyuan Shi, Hongyang Pan, Sadaf Khan, Min Li, Yi Liu, Junhua
        Huang, Hui-Ling Zhen, Mingxuan Yuan, <A
-         HREF="https://zfchu.github.io/">Zhufei Chu</a>, Qiang Xu，"DeepGate2:
+         HREF="https://zfchu.github.io/">Zhufei Chu</a>, Qiang Xu，"<A HREF="https://ieeexplore.ieee.org/document/10323798">DeepGate2:
        Functionality-Aware Circuit Representation
-       Learning"，<strong>ICCAD'23</strong>, 2023 International Conference on Computer-Aided Design, San
+       Learning</a>"，<strong>ICCAD'23</strong>, 2023 International Conference on Computer-Aided Design, San
                                                 Francisco, CA, USA, Nov. 2023.</li>
    <li>Hongyang Pan and <A HREF="https://zfchu.github.io/">Zhufei Chu</a>, "<A
   HREF="https://jcst.ict.ac.cn/EN/10.1007/s11390-022-1981-4">A
