--- a/index.html
+++ b/index.html
@@ -219,10 +219,14 @@ style="width:1em;margin-right:.5em;" alt="ORCID iD icon">[orcid]</a>
 Zhengyuan Shi, Tiebing Tang, Jiaying Zhu, Sadaf Khan, Hui-Ling Zhen, Mingxuan Yuan, <A
        HREF="https://zfchu.github.io/">Zhufei Chu</a> and Qiang Xu, "Logic Optimization Meets SAT: A Novel Framework for Circuit-SAT Solving",  <strong> DAC' 25</strong>, <i>ACM/IEEE Design Automation Conference</i>, San Francisco, USA, June 2025. 
 	   </li>
-	   <li>
-	   	Qiyao He and <A
-       HREF="https://zfchu.github.io/">Zhufei Chu</a>,"Enhancing Alliance VLSI Toolchain by Mixed Gate-level Logic Synthesis",  <strong>CSTIC' 25</strong>, <i>2025 Conference of Science and Technology for Integrated Circuits</i>, Shanghai, China, Mar. 2025.
-	   </li>
+     <li>
+       Liwei Ni, Rui Wang, Miao Liu, Xingyu Meng, Xiaoze Lin, Junfeng Liu,
+       Guojie Luo, <A HREF="https://zfchu.github.io">Zhufei Chu</a>, Weikang Qian, Xiaoyan Yang, Biwei Xie, Xingquan
+       Li, Huawei Li, "OpenLS-DGF: An Adaptive Open-Source Dataset Generation
+       Framework for Machine Learning Tasks in Logic Synthesis",  <i> IEEE Transactions on Computer-Aided Design of Integrated Circuits and Systems
+     </i>, <strong>TCAD</strong>, Accepted for publication.
+       </li>
+
    <li>
      Hongyang Pan, Keren Zhu, Fan Yang,  <A
        HREF="https://zfchu.github.io/">Zhufei Chu</a> and Xuan Zeng,
@@ -230,7 +234,10 @@ Zhengyuan Shi, Tiebing Tang, Jiaying Zhu, Sadaf Khan, Hui-Ling Zhen, Mingxuan Yu
      <strong> DATE' 25</strong>, <i>2025 Design, Automation
        and Test in Europe Conference</i>, Lyon, France, Mar. 2025. 
    </li>
-
+	   <li>
+	   	Qiyao He and <A
+       HREF="https://zfchu.github.io/">Zhufei Chu</a>,"Enhancing Alliance VLSI Toolchain by Mixed Gate-level Logic Synthesis",  <strong>CSTIC' 25</strong>, <i>2025 Conference of Science and Technology for Integrated Circuits</i>, Shanghai, China, Mar. 2025.
+	   </li>
 
   <h4> 2024 </h3>
    <p class="big">
