--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
 <title>Zhufei Chu</title>
 </head>
 
+@media screen and (max-width: 768px) {
+  table {
+    display: flex;
+    flex-direction: column;
+  }
+  img {
+    max-width: 100%;
+    height: auto;
+  }
+}
+
 <head>
   <style>
     @keyframes flashing {
@@ -72,7 +83,7 @@ Logic Synthesis, Physical Design, FPGA Synthesis, Emerging Nanotechnologies<br>
 <h2> <a name="tools">Tools</a> 
 </h2>
 <li>
-<strong>ALSO</strong>: <strong>A</strong>dcanced  <strong>L</strong>ogic
+<strong>ALSO</strong>: <strong>A</strong>dvanced  <strong>L</strong>ogic
 <strong>S</strong>ynthesis and <strong>O</strong>ptimization tool. <A HREF="https://github.com/nbulsi/also">[GitHub]</a>
 <A HREF="https://gitee.com/zfchu/also">[Gitee]</a>. <span class="red-star">&#9733;</span> </li>
 
@@ -92,7 +103,7 @@ Design Automation is presented at <A
 <a href="also.mp4" download >[demo video]</a>. 
  </li>
 
-<li>An online turotial <A
+<li>An online tutorial <A
     HREF="https://www.bilibili.com/video/BV1Ha411J7ow/?p=3">"Logic Synthesis,
     Optimization, and Verification"</a> invited by Xidian University was
   presented on Apr. 25th, 2022.</li>
@@ -191,7 +202,8 @@ Design Automation is presented at <A
      HREF="https://zhaosheng.eol.cn/11646/tutors/index/daoshidetail?school_id=461&m_id=35619&ds_id=19760">[NBU
    link]</a>, born on Oct. 24th, 1986,  received his B.S. degree in electronic engineering from Shandong University, Weihai, China, in 2008, and his M.S. and Ph.D. degrees in communication and information systems from Ningbo University, Ningbo, in 2011 and 2014, respectively.
     He was a postdoctoral fellow at the Ecole Polytechnique Federale de Lausanne (EPFL), Lausanne, from 2016 to 2017, in the group of <A HREF="http://si2.epfl.ch/~demichel/">Prof. Giovanni De Micheli</a>.
-    He is currently a full professor at Ningbo University, Ningbo. His current research interests include many aspects of logic synthesis and its applications.
+    He is currently a full professor at Ningbo University, Ningbo. 
+    His current research interests focus on various aspects of logic synthesis and its applications.
 </UL>	
 <HR>
 
@@ -201,7 +213,7 @@ Kaihui Tu, Xifan Tang, Cunxi Yu, Lana Josipovic, and <A HREF="https://zfchu.gith
     HREF="https://link.springer.com/book/10.1007/978-981-99-7755-0">FPGA
     EDA : Design Principles and Implementation</strong></a>, Springer, Jan. 2024.
       
-<h2> <a name="publications">Publications <a href="https://scholar.google.com/citations?hl=en&user=0spez40AAAAJ&view_op=list_works&gmla=AJsN-F7L0_K-NorY6eoZe8Pw5s7fVCiAq78gP2ooH9ToyokXmHtZMdOpLqZcA1SdxYMErXBK7c3ojrJANocYOruEoCCtFhL_X66ox6BQu7pD55qOLBSKisIgW6UyODbwLeEAWXk-sFtfYo8WCNcAkyazMLZ_JKn6yQ"> [Google Scholar]</a> <a href="http://dblp.uni-trier.de/pers/hd/c/Chu:Zhufei"> [DBLP] 
+<h2> <a name="publications">Publications <a href="https://scholar.google.com/citations?hl=en&user=0spez40AAAAJ&view_op=list_works&gmla=AJsN-F7L0_K-NorY6eoZe8Pw5s7fVCiAq78gP2ooH9ToyokXmHtZMdOpLqZcA1SdxYMErXBK7c3ojrJANocYOruEoCCtFhL_X66ox6BQu7pD55qOLBSKisIgW6UyODbwLeEAWXk-sftYo8WCNcAkyazMLZ_JKn6yQ"> [Google Scholar]</a> <a href="http://dblp.uni-trier.de/pers/hd/c/Chu:Zhufei"> [DBLP] 
 <a href="https://orcid.org/0000-0001-5718-4822" target="orcid.widget" rel="noopener noreferrer"
   style="vertical-align:top;"><img
   src="https://orcid.org/sites/default/files/images/orcid_16x16.png"
@@ -212,6 +224,26 @@ style="width:1em;margin-right:.5em;" alt="ORCID iD icon">[orcid]</a>
    <h3> 2025 </h3>
    <p class="big">
 	   	   <li>
+			   Zeju Li, Changran Xu, Zhengyuan Shi, Zedong Peng, Yi Liu, Yunhao Zhou, Lingfeng Zhou, Chengyu Ma, Jianyuan Zhong, Xi Wang, Jieru Zhao, <A
+	          HREF="https://zfchu.github.io/">Zhufei Chu</a>, Xiaoyan Yang, and Qiang Xu, "DeepCircuitX: A Comprehensive Repository-Level Dataset for RTL Code Understanding, Generation, and PPA Analysis", <strong> LAD' 25</strong>, <i>IEEE International Conference on LLM-Aided Design</i>, Stanford, CA, USA, June 2025.
+		   </li>
+		   <li>
+			   Jiaxin Peng, Zhang Hu, Yinshui Xia, Lunyao Wang, and <A
+	          HREF="https://zfchu.github.io/">Zhufei Chu</a>，"SAT-Sweeping Based on XOR-Majority Graph", <strong> ISEDA' 25</strong>,  <i>IEEE International Symposium of EDA</i>, May 2025, Hong Kong, China.
+		   </li>
+		   <li>
+			   Chengkai Qiu, Yanzhen Wang, Hongyang Pan, Yinshui Xia, Lunyao Wang, and <A
+	          HREF="https://zfchu.github.io/">Zhufei Chu</a>，"STPSim: Accelerating Circuit Simulation via Semi-Tensor Product-Based Parallelism", <strong> ISEDA' 25</strong>,  <i>IEEE International Symposium of EDA</i>, May 2025, Hong Kong, China.
+		   </li>
+		   <li>
+			   Haonan Wei, Wentao Jiang,  Zhang Hu, Zhengyuan Shi, Yinshui Xia, Lunyao Wang, and <A
+	          HREF="https://zfchu.github.io/">Zhufei Chu</a>，"Auto-CEC: Combinational Equivalence Checking via Intelligent Sweeping Engine Selection", <strong> ISEDA' 25</strong>,  <i>IEEE International Symposium of EDA</i>, May 2025, Hong Kong, China.
+		   </li>
+		   <li>
+			   Chen Lv, Chengyu Ma, Hongyang Pan, Yinshui Xia, Lunyao Wang, and <A
+	          HREF="https://zfchu.github.io/">Zhufei Chu</a>，"Area-oriented Boolean Resubstitution with Efficient Dependency Function Computation", <strong> ISEDA' 25</strong>,  <i>IEEE International Symposium of EDA</i>, May 2025, Hong Kong, China.
+		   </li>
+		   <li>
 	   	Zhang Hu, Hongyang Pan, Yinshui Xia, Lunyao Wang and <A
 	          HREF="https://zfchu.github.io/">Zhufei Chu</a>, "Mixed Structural Choice Operator: Enhancing Technology Mapping with Heterogeneous Representations",  <strong> DAC' 25</strong>, <i>ACM/IEEE Design Automation Conference</i>, San Francisco, USA, June 2025. 
 	   	   </li>
