--- a/index.html
+++ b/index.html
@@ -212,6 +212,11 @@ style="width:1em;margin-right:.5em;" alt="ORCID iD icon">[orcid]</a>
 <OL>
    <h3> 2025 </h3>
    <p class="big">
+	   <li>
+		   Zhengyuan Shi, Jiangwentao, Xindi Zhang, Jin Luo, Yun Liang, <A
+	          HREF="https://zfchu.github.io/">Zhufei Chu</a>, and Qiang Xu, "DynamicSAT: Dynamic Configuration Tuning for SAT Solving", <strong> CP' 25</strong>, 
+		   <i>The 31st International Conference on Principles and Practice of Constraint Programming</i>, Glasgow, Scotland, Aug. 2025.
+	   </li>
 	   	   <li>
 			   Zeju Li, Changran Xu, Zhengyuan Shi, Zedong Peng, Yi Liu, Yunhao Zhou, Lingfeng Zhou, Chengyu Ma, Jianyuan Zhong, Xi Wang, Jieru Zhao, <A
 	          HREF="https://zfchu.github.io/">Zhufei Chu</a>, Xiaoyan Yang, and Qiang Xu, "DeepCircuitX: A Comprehensive Repository-Level Dataset for RTL Code Understanding, Generation, and PPA Analysis", <strong> LAD' 25</strong>, <i>IEEE International Conference on LLM-Aided Design</i>, Stanford, CA, USA, June 2025.
