--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@ Zhengyuan Shi, Tiebing Tang, Jiaying Zhu, Sadaf Khan, Hui-Ling Zhen, Mingxuan Yu
    </li>
 	   <li>
 	   	Qiyao He and <A
-       HREF="https://zfchu.github.io/">Zhufei Chu</a>,"Enhancing Alliance VLSI Toolchain by Mixed Gate-level Logic Synthesis",  <strong>CSTIC' 25</strong>, <i>2025 Conference of Science and Technology for Integrated Circuits</i>, Shanghai, China, Mar. 2025.
+       HREF="https://zfchu.github.io/">Zhufei Chu</a>,"<A HREF="https://ieeexplore.ieee.org/document/11017876">Enhancing Alliance VLSI Toolchain by Mixed Gate-level Logic Synthesis</a>",  <strong>CSTIC' 25</strong>, <i>2025 Conference of Science and Technology for Integrated Circuits</i>, Shanghai, China, Mar. 2025.
 	   </li>
 
   <h4> 2024 </h3>
