--- a/index.html
+++ b/index.html
@@ -24,7 +24,37 @@
     li {
       line-height: 1.8; 
     }
+  #newsList li:nth-child(n+11) {
+  display: none;
+}
+#newsToggle {
+  font-size: 14px;
+  padding: 4px 12px;
+  margin-left: 10px;
+  cursor: pointer;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  background: #f8f8f8;
+}
+#newsToggle:hover {
+  background: #e8e8e8;
+}
   </style>
+  <script>
+    function toggleNews() {
+      const list = document.getElementById('newsList');
+      const items = list.getElementsByTagName('li');
+      const button = document.getElementById('newsToggle');
+      const isExpanded = list.classList.contains('expanded');
+      
+      for (let i = 10; i < items.length; i++) {
+        items[i].style.display = isExpanded ? 'none' : 'list-item';
+      }
+      
+      list.classList.toggle('expanded');
+      button.textContent = isExpanded ? 'More' : 'Less';
+    }
+    </script>
 </head>
 
 <!body background="images/background.jpg" BGCOLOR="#8C7853">
@@ -97,89 +127,90 @@ Design Automation is presented at <A
     Optimization, and Verification"</a> invited by Xidian University was
   presented on Apr. 25th, 2022.</li>
 
-<h2> <a name="news">Recent News</a> </h2>
+  <h2> <a name="news">Recent News</a> <button onclick="toggleNews()" id="newsToggle">More</button></h2>
 
-<UL>
-	 <p class="big">
-   
+  <UL id="newsList">
+    <p class="big">
+      <li> June 2025, Invited to serve as a TPC member of <A
+        HREF="https://www.date-conference.com/">DATE'26</a>.</li>
       <li> Feb. 2025, Invited to serve as a TPC member of <A
-       HREF="https://sasimi.jp/new/sasimi2025/">SASIMI'25</a>.</li>
-      <li> Jan. 2025, Invited to serve as TPC Chair of <A
-       HREF="http://iccs.org/index.html">ICCS'25</a>.</li>
-     <li> Jan. 2025, Invited to serve as a TPC
-      member of <A HREF="https://www.iwls.org/iwls2025/">IWLS'25</a>.</li>
-     <li>Dec. 2024, Invited to serve as High-Level, Behavioral, and Logic
-       Synthesis and Optimization Track
-     Chair of <A HREF="https://www.eda2.com/iseda/">ISEDA'25</a>.</li>
-	     <li>Oct. 2024, Invited to serve as a TPC Member of <A
-	         HREF="https://www.dac.com">
-			 DAC'25</a>.</li>
-	     <li> Sep. 2024, Jun as the first author won the ISEDA Honorable Mention
-         Paper Award at <A HREF="https://www.eda2.com/conferenceHome/">ISEDA'24</a>.</li>
-	     <li> July 2024, Jiaxiang as the first author won the EDA Competition Winner
-	       at <A HREF="https://smacd-conference.org/">SMACD'24</a>.</li>
-	     <li>June 2024, Invited to serve as a TPC Member of <A
-	         HREF="https://www.date-conference.com/tpc">
-			 DATE'25</a>.</li>
-   <li>Mar. 2024, Invited to serve as a TPC Member of <A
-       HREF="https://std.samr.gov.cn/search/orgDetailView?data_id=EE1BA472BFC52880E05397BE0A0A248E">
-       National Standardization TC 599/ WG1</a>.</li>
-   <li>Oct. 2023, Invited to serve as a Research TPC Subcommittee Member of <A
-       HREF="https://www.dac.com/">
-       DAC'24</a>.</li>
-   <li>Oct. 2023, Invited to serve as Digital Design & Verification Track
-     Chair of <A HREF="https://www.eda2.com/conferenceHome/">ISEDA'24</a>.</li>
-   <li>Oct. 2023, Invited to serve as a <A
-                                           HREF=https://www.semiconchina.org/en/7>TPC member</a> and <A
-       HREF=https://www.semiconchina.org/en/1244>invited speaker</a> of
-     <A HREF=https://www.semiconchina.org/en/5>CSTIC'24</a>.</li>
-   <li>Aug. 2023, Invited to serve as a Competition Committee Member of <A HREF="https://eda.icisc.cn/activity/toTpcType">EDA Elite Challenge</a>.</li>
-   <li> July 2023, Chengyu as the first author won the Honorable Paper Award
-     at <A HREF="https://www.eda2.com/conferenceHome/">ISEDA'23</a>.</li>
-   <li> May 2023, Invited to serve as Publication Chair of <A HREF="https://conf.ccf.org.cn/ccfdac23">CCFDAC'23</a>.</li>
-   <li> Mar. 2023, Invited to serve as a Editorial Board Member of <A
-       HREF="https://jeit.ac.cn/news/About%20Journal.htm">JEIT</a>.</li>
-   <li> Mar. 2023, Invited to serve as TPC Chair of <A
-       HREF="http://iccs.org/index.html">ICCS'23</a>.</li>
-    <li> Dec. 2022, Promoted to be a Full Professor.</li>
-    <li> Dec. 2022, Invited to serve as Finance Chair and TPC
-      member of <A HREF="https://www.iwls.org/iwls2023/">IWLS'23</a>.</li>
-   <li>Nov. 2022, Invited to serve as a Research TPC Subcommittee Member of <A
-       HREF="https://www.dac.com/">
-       DAC'23</a>.</li>
-   <li>Oct. 2022, Invited to serve as Digital Design & Verification Track
-     Chair of <A HREF="https://www.eda2.com/conferenceHome/">ISEDA'23</a>.</li>
-   <li> May 2022, Invited to serve as sub-forum co-chair and a TPC member of <A
-                                                          HREF="http://conf.ccf.org.cn/chip2022">CCF
-                                                          Chip'22</a>.</li>
-   <li> Oct. 2021, Invited to serve as a TPC member of <A
-                                                          HREF="https://embeddedandvlsidesignconference.org/">VLSID'22</a>.</li>
-    <li> Oct. 2021, Won the Best Paper Award at <A HREF="http://conf.ccf.org.cn/ccfdac2021">CCFDAC'21</a>. (<A HREF="https://news.nbu.edu.cn/info/1004/42169.htm">NBU link</a>)</li>
-    <li> Aug. 2021, Invited to serve as Finance Chair and a TPC
-      member of <A HREF="https://www.iwls.org/iwsl2022/">IWLS'22</a>.</li>
-    <li> Jan. 2021, Invited to serve as Proceedings Chair and a TPC member of <A HREF="https://www.iwls.org/iwls2021/">IWLS'21</a>.</li>
-  <li> Oct. 2020, Invited to serve as a TPC member of <A
-                                                          HREF="https://embeddedandvlsidesignconference.org/">VLSID'21</a>.</li>
-  <li> Aug. 2020, Invited to serve as a TPC member of <A
-      HREF="https://www.semiconchina.org/en/7">
-      CSTIC'21</a> (Symposium IX). </li>
-  <li> Aug. 2020, Invited to serve as a TPC member of <A
-      HREF="https://sites.google.com/view/vlsi-soc-2020/home">
-      VLSI-SoC'20</a> (PhD Forum). </li>
-  <li> Aug. 2020, Invited to serve as a TPC member of <A
-      HREF="http://www.iccd-conf.com/Home.html">
-      ICCD'20</a> (Special Sessions). </li>
-  <li> Mar. 2020, Invited to serve as a TPC member of <A
-      HREF="https://conf.ccf.org.cn/web/html5/index.html?globalId=574c0f1ef8c04db9bd3b5d718e091b5c&type=1"> CCFDAC'20</a>. </li>
-  <li> Feb. 2020, Invited to serve as a TPC member of <A
-      HREF="https://coinsconf.com/"> COINS'20</a>. </li>
-  <li> Jan. 2020, Invited to serve as Proceedings Chair of <A
-      HREF="http://www.iwls.org/iwls2020/"> IWLS'20</a>. </li>
-  <li> June 2019, Invited to serve as a TPC member of <A
-                                                          HREF="https://embeddedandvlsidesignconference.org/">VLSID'20</a>.</li>
-  <li> Feb. 2019, Invited to serve as Proceedings Chair and
-    Session Chair of <A HREF="http://www.iwls.org/iwls2019/"> IWLS'19</a>. </li>
-</UL>
+        HREF="https://sasimi.jp/new/sasimi2025/">SASIMI'25</a>.</li>
+       <li> Jan. 2025, Invited to serve as TPC Chair of <A
+        HREF="http://iccs.org/index.html">ICCS'25</a>.</li>
+      <li> Jan. 2025, Invited to serve as a TPC
+       member of <A HREF="https://www.iwls.org/iwls2025/">IWLS'25</a>.</li>
+      <li>Dec. 2024, Invited to serve as High-Level, Behavioral, and Logic
+        Synthesis and Optimization Track
+      Chair of <A HREF="https://www.eda2.com/iseda/">ISEDA'25</a>.</li>
+        <li>Oct. 2024, Invited to serve as a TPC Member of <A
+            HREF="https://www.dac.com">
+        DAC'25</a>.</li>
+        <li> Sep. 2024, Jun as the first author won the ISEDA Honorable Mention
+          Paper Award at <A HREF="https://www.eda2.com/conferenceHome/">ISEDA'24</a>.</li>
+        <li> July 2024, Jiaxiang as the first author won the EDA Competition Winner
+          at <A HREF="https://smacd-conference.org/">SMACD'24</a>.</li>
+        <li>June 2024, Invited to serve as a TPC Member of <A
+            HREF="https://www.date-conference.com/tpc">
+        DATE'25</a>.</li>
+    <li>Mar. 2024, Invited to serve as a TPC Member of <A
+        HREF="https://std.samr.gov.cn/search/orgDetailView?data_id=EE1BA472BFC52880E05397BE0A0A248E">
+        National Standardization TC 599/ WG1</a>.</li>
+    <li>Oct. 2023, Invited to serve as a Research TPC Subcommittee Member of <A
+        HREF="https://www.dac.com/">
+        DAC'24</a>.</li>
+    <li>Oct. 2023, Invited to serve as Digital Design & Verification Track
+      Chair of <A HREF="https://www.eda2.com/conferenceHome/">ISEDA'24</a>.</li>
+    <li>Oct. 2023, Invited to serve as a <A
+                                            HREF=https://www.semiconchina.org/en/7>TPC member</a> and <A
+        HREF=https://www.semiconchina.org/en/1244>invited speaker</a> of
+      <A HREF=https://www.semiconchina.org/en/5>CSTIC'24</a>.</li>
+    <li>Aug. 2023, Invited to serve as a Competition Committee Member of <A HREF="https://eda.icisc.cn/activity/toTpcType">EDA Elite Challenge</a>.</li>
+    <li> July 2023, Chengyu as the first author won the Honorable Paper Award
+      at <A HREF="https://www.eda2.com/conferenceHome/">ISEDA'23</a>.</li>
+    <li> May 2023, Invited to serve as Publication Chair of <A HREF="https://conf.ccf.org.cn/ccfdac23">CCFDAC'23</a>.</li>
+    <li> Mar. 2023, Invited to serve as a Editorial Board Member of <A
+        HREF="https://jeit.ac.cn/news/About%20Journal.htm">JEIT</a>.</li>
+    <li> Mar. 2023, Invited to serve as TPC Chair of <A
+        HREF="http://iccs.org/index.html">ICCS'23</a>.</li>
+     <li> Dec. 2022, Promoted to be a Full Professor.</li>
+     <li> Dec. 2022, Invited to serve as Finance Chair and TPC
+       member of <A HREF="https://www.iwls.org/iwls2023/">IWLS'23</a>.</li>
+    <li>Nov. 2022, Invited to serve as a Research TPC Subcommittee Member of <A
+        HREF="https://www.dac.com/">
+        DAC'23</a>.</li>
+    <li>Oct. 2022, Invited to serve as Digital Design & Verification Track
+      Chair of <A HREF="https://www.eda2.com/conferenceHome/">ISEDA'23</a>.</li>
+    <li> May 2022, Invited to serve as sub-forum co-chair and a TPC member of <A
+                                                           HREF="http://conf.ccf.org.cn/chip2022">CCF
+                                                           Chip'22</a>.</li>
+    <li> Oct. 2021, Invited to serve as a TPC member of <A
+                                                           HREF="https://embeddedandvlsidesignconference.org/">VLSID'22</a>.</li>
+     <li> Oct. 2021, Won the Best Paper Award at <A HREF="http://conf.ccf.org.cn/ccfdac2021">CCFDAC'21</a>. (<A HREF="https://news.nbu.edu.cn/info/1004/42169.htm">NBU link</a>)</li>
+     <li> Aug. 2021, Invited to serve as Finance Chair and a TPC
+       member of <A HREF="https://www.iwls.org/iwsl2022/">IWLS'22</a>.</li>
+     <li> Jan. 2021, Invited to serve as Proceedings Chair and a TPC member of <A HREF="https://www.iwls.org/iwls2021/">IWLS'21</a>.</li>
+   <li> Oct. 2020, Invited to serve as a TPC member of <A
+                                                           HREF="https://embeddedandvlsidesignconference.org/">VLSID'21</a>.</li>
+   <li> Aug. 2020, Invited to serve as a TPC member of <A
+       HREF="https://www.semiconchina.org/en/7">
+       CSTIC'21</a> (Symposium IX). </li>
+   <li> Aug. 2020, Invited to serve as a TPC member of <A
+       HREF="https://sites.google.com/view/vlsi-soc-2020/home">
+       VLSI-SoC'20</a> (PhD Forum). </li>
+   <li> Aug. 2020, Invited to serve as a TPC member of <A
+       HREF="http://www.iccd-conf.com/Home.html">
+       ICCD'20</a> (Special Sessions). </li>
+   <li> Mar. 2020, Invited to serve as a TPC member of <A
+       HREF="https://conf.ccf.org.cn/web/html5/index.html?globalId=574c0f1ef8c04db9bd3b5d718e091b5c&type=1"> CCFDAC'20</a>. </li>
+   <li> Feb. 2020, Invited to serve as a TPC member of <A
+       HREF="https://coinsconf.com/"> COINS'20</a>. </li>
+   <li> Jan. 2020, Invited to serve as Proceedings Chair of <A
+       HREF="http://www.iwls.org/iwls2020/"> IWLS'20</a>. </li>
+   <li> June 2019, Invited to serve as a TPC member of <A
+                                                           HREF="https://embeddedandvlsidesignconference.org/">VLSID'20</a>.</li>
+   <li> Feb. 2019, Invited to serve as Proceedings Chair and
+     Session Chair of <A HREF="http://www.iwls.org/iwls2019/"> IWLS'19</a>. </li>
+  </UL>
 
 <HR>
 	
