iwls general chair

--- a/index.html
+++ b/index.html
@@ -131,6 +131,9 @@ Design Automation is presented at <A
 
   <UL id="newsList">
     <p class="big">
+	<li>July 2025, I will serve as the General Chair of IWLS'26</a> (Hongkong, 2026).</li>
+	<li>July 2025, I will serve as the Organizing Chair of <A
+        HREF="https://conf.ccf.org.cn/ccfdac2025">CCFDAC'25</a> (Ningbo, Oct 2025).</li>
       <li> June 2025, Invited to serve as a TPC member of <A
         HREF="https://www.date-conference.com/">DATE'26</a>.</li>
       <li> Feb. 2025, Invited to serve as a TPC member of <A
@@ -243,6 +246,9 @@ style="width:1em;margin-right:.5em;" alt="ORCID iD icon">[orcid]</a>
 <OL>
    <h3> 2025 </h3>
    <p class="big">
+	   <li> Zhengyuan Shi, Chengyu Ma, Ziyang Zheng, Lingfeng Zhou, Hongyang Pan, Wentao Jiang, Fan Yang, Xiaoyan Yang, <A
+	          HREF="https://zfchu.github.io/">Zhufei Chu</a>, and Qiang Xu, "DeepCell: Self-Supervised Multiview Fusion for Circuit Representation Learning", <strong> ICCAD' 25</strong>, 
+		   <i>International Conference on Computer-Aided Design</i>, Munich, Germany, Oct. 2025.</li>
 	   <li>
 		   Zhengyuan Shi, Jiangwentao, Xindi Zhang, Jin Luo, Yun Liang, <A
 	          HREF="https://zfchu.github.io/">Zhufei Chu</a>, and Qiang Xu, "DynamicSAT: Dynamic Configuration Tuning for SAT Solving", <strong> CP' 25</strong>, 
