--- a/index.html
+++ b/index.html
@@ -246,6 +246,9 @@ style="width:1em;margin-right:.5em;" alt="ORCID iD icon">[orcid]</a>
 <OL>
    <h3> 2025 </h3>
    <p class="big">
+	   <li>Hongyang Pan, Sen Liu, Yong Xiao, Yun Shao, Keren Zhu, Fan Yang, Xuan Zeng and <A
+	          HREF="https://zfchu.github.io/">Zhufei Chu</a>, "Rethinking Logic Rewriting: Technology-Aware Subgraph Matching with Exact Synthesis", <i>ACM Transactions on Design Automation of Electronic Systems
+     </i>, <strong>TODAES</strong>, 2025, Accepted for publication.</li>
 	   <li> Zhengyuan Shi, Chengyu Ma, Ziyang Zheng, Lingfeng Zhou, Hongyang Pan, Wentao Jiang, Fan Yang, Xiaoyan Yang, <A
 	          HREF="https://zfchu.github.io/">Zhufei Chu</a>, and Qiang Xu, "DeepCell: Self-Supervised Multiview Fusion for Circuit Representation Learning", <strong> ICCAD' 25</strong>, 
 		   <i>International Conference on Computer-Aided Design</i>, Munich, Germany, Oct. 2025.</li>
@@ -287,7 +290,7 @@ Zhengyuan Shi, Tiebing Tang, Jiaying Zhu, Sadaf Khan, Hui-Ling Zhen, Mingxuan Yu
        Guojie Luo, <A HREF="https://zfchu.github.io">Zhufei Chu</a>, Weikang Qian, Xiaoyan Yang, Biwei Xie, Xingquan
        Li, Huawei Li, "OpenLS-DGF: An Adaptive Open-Source Dataset Generation
        Framework for Machine Learning Tasks in Logic Synthesis",  <i> IEEE Transactions on Computer-Aided Design of Integrated Circuits and Systems
-     </i>, <strong>TCAD</strong>, Accepted for publication.
+     </i>, <strong>TCAD</strong>, 2025, Accepted for publication.
        </li>
 
    <li>
@@ -704,6 +707,7 @@ Scale Integration Systems (<strong>TVLSI</strong>)</i>,
   <li>Reviewer for the journal IEEE Transactions on Emerging Topics in Computing. </li>
   <li>Reviewer for the journal IEEE Transactions on Circuits and Systems-Part I. </li>
   <li>Reviewer for the journal IEEE Transactions on Circuits and Systems-Part II. </li>
+  <li>Reviewer for the journal IEEE Transactions on Information Forensics & Security. </li>
   <li>Reviewer for the journal ACM Transactions on Design Automation of Electronic Systems. </li>
   <li>Reviewer for the journal IET Circuits, Devices & Systems. </li>
   <li>Reviewer for the journal Journal of Computer Science and Technology. </li>
@@ -715,6 +719,7 @@ Scale Integration Systems (<strong>TVLSI</strong>)</i>,
   <li>Reviewer for the journal Optik, International Journal for Light and Electron Optics. </li>
   <li>Reviewer for the journal Journal of Combinatorial Optimization. </li>
   <li>Reviewer for the journal Journal of Supercomputing. </li>
+  <li>Reviewer for the journal The Computer Journal. </li>
 </ul>
 
 <h2><a name="links">Links</a></h2>
