--- a/index.html
+++ b/index.html
@@ -134,6 +134,8 @@ Design Automation is presented at <A
 	<li>July 2025, I will serve as the General Chair of IWLS'26</a> (Hongkong, 2026).</li>
 	<li>July 2025, I will serve as the Organizing Chair of <A
         HREF="https://conf.ccf.org.cn/ccfdac2025">CCFDAC'25</a> (Ningbo, Oct 2025).</li>
+      <li> July 2025, Invited to serve as a TPC member of <A
+        HREF="https://www.aspdac.com/">ASPDAC'26</a>.</li>
       <li> June 2025, Invited to serve as a TPC member of <A
         HREF="https://www.date-conference.com/">DATE'26</a>.</li>
       <li> Feb. 2025, Invited to serve as a TPC member of <A
