--- a/index.html
+++ b/index.html
@@ -246,6 +246,10 @@ style="width:1em;margin-right:.5em;" alt="ORCID iD icon">[orcid]</a>
     </a></a> </h2>
 <p>
 <OL>
+	  <h3> 2026 </h3>
+   <li> Lingfeng Zhou, Yilong Zhou, Hao Gong, Zhengyuan Shi, Qiang Xv, <A
+          HREF="https://zfchu.github.io/">Zhufei Chu</a>, Yue Wu, Xiaoyan Yang, and Qiang Xu, "DeepCut: Structure-Aware GNN Framework for Efficient Cut Timing Prediction in Logic Synthesis", <strong> ASPDAC' 25</strong>, 
+	   <i>Asia and South Pacific Design Automation Conference</i>, Hongkong, China, Jan. 2026.</li>
    <h3> 2025 </h3>
    <p class="big">
 	   <li>Hongyang Pan, Sen Liu, Yong Xiao, Yun Shao, Keren Zhu, Fan Yang, Xuan Zeng and <A
