--- a/index.html
+++ b/index.html
@@ -247,8 +247,10 @@ style="width:1em;margin-right:.5em;" alt="ORCID iD icon">[orcid]</a>
 <p>
 <OL>
 	  <h3> 2026 </h3>
-   <li> Lingfeng Zhou, Yilong Zhou, Hao Gong, Zhengyuan Shi, Qiang Xv, <A
-          HREF="https://zfchu.github.io/">Zhufei Chu</a>, Yue Wu, Xiaoyan Yang, and Qiang Xu, "DeepCut: Structure-Aware GNN Framework for Efficient Cut Timing Prediction in Logic Synthesis", <strong> ASPDAC' 25</strong>, 
+   <li> Lingfeng Zhou, Yilong Zhou, Hao Gong, Zhengyuan Shi, Qiang Xu, <A
+          HREF="https://zfchu.github.io/">Zhufei Chu</a>, Yue Wu, and Xiaoyan
+        Yang, "DeepCut: Structure-Aware GNN Framework for Efficient Cut Timing
+        Prediction in Logic Synthesis", <strong> ASPDAC' 26</strong>, 
 	   <i>Asia and South Pacific Design Automation Conference</i>, Hongkong, China, Jan. 2026.</li>
    <h3> 2025 </h3>
    <p class="big">
@@ -294,9 +296,9 @@ Zhengyuan Shi, Tiebing Tang, Jiaying Zhu, Sadaf Khan, Hui-Ling Zhen, Mingxuan Yu
      <li>
        Liwei Ni, Rui Wang, Miao Liu, Xingyu Meng, Xiaoze Lin, Junfeng Liu,
        Guojie Luo, <A HREF="https://zfchu.github.io">Zhufei Chu</a>, Weikang Qian, Xiaoyan Yang, Biwei Xie, Xingquan
-       Li, Huawei Li, "OpenLS-DGF: An Adaptive Open-Source Dataset Generation
-       Framework for Machine Learning Tasks in Logic Synthesis",  <i> IEEE Transactions on Computer-Aided Design of Integrated Circuits and Systems
-     </i>, <strong>TCAD</strong>, 2025, Accepted for publication.
+       Li, Huawei Li, "<A HREF="https://ieeexplore.ieee.org/document/10943238">OpenLS-DGF: An Adaptive Open-Source Dataset Generation
+         Framework for Machine Learning Tasks in Logic Synthesis</a>",  <i> IEEE Transactions on Computer-Aided Design of Integrated Circuits and Systems
+     </i>, <strong>TCAD</strong>, Oct. 2025, 44(10):3830-3843.
        </li>
 
    <li>
