--- a/index.html
+++ b/index.html
@@ -247,6 +247,8 @@ style="width:1em;margin-right:.5em;" alt="ORCID iD icon">[orcid]</a>
 <p>
 <OL>
 	  <h3> 2026 </h3>
+	  <li>Qiyao He, Zhang Hu, Yinshui Xia, Lunyao Wang, and <A
+	          HREF="https://zfchu.github.io/">Zhufei Chu</a>, "<A HREF="https://www.sciencedirect.com/science/article/abs/pii/S0167926025002378">Enhancing Logic Optimization of Alliance Tool based on Directed Acyclic Graphs</a> ", <i>Integration, the VLSI Journal </i>,  Volume 106, January 2026, 102580.  </li>
    <li> Lingfeng Zhou, Yilong Zhou, Hao Gong, Zhengyuan Shi, Qiang Xu, <A
           HREF="https://zfchu.github.io/">Zhufei Chu</a>, Yue Wu, and Xiaoyan
         Yang, "DeepCut: Structure-Aware GNN Framework for Efficient Cut Timing
