--- a/index.html
+++ b/index.html
@@ -748,7 +748,7 @@ Scale Integration Systems (<strong>TVLSI</strong>)</i>,
         </h2> 
         Yuxiu Road 505, Zhenhai, Ningbo, 315211<br>
         Faculty of Electrical Engineering and Computer Science (EECS)<br>
-        Ningbo Univeristy, Zhejiang, China</td>
+        Ningbo University, Zhejiang, China</td>
       <td></td>
       <td width="500"></td>
       <td></td>
